# vi-slam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake.in
docs/: VSLAM-Fontend.drawio  about_test.md  ba.md  coordinate_setup.md  dataset.md  feature_extructor.md  initialization.md  opengv_memo.md  setup.md  vi-slam.md  vision-backend.md  vision-frontend.md  vislam.drawio
example/: CMakeLists.txt  ba_test1_vio_sim_dataset.cpp  ba_test2_vio_sim_dataset.cpp  sample1.cpp  sample2.cpp  sample2_ba_opt1.cpp  sample2_ba_opt2.cpp  sample2_ba_pre.cpp  sample2_ba_pre2.cpp  sample2_cam.cpp  sample2_euroc_mav.cpp  sample2_initialize.cpp  sample2_pnp.cpp  sample2_reprojection.cpp  sample2_vio_sim_dataset.cpp  sample_viz.cpp
example/gtsam/: CMakeLists.txt  SFMdata.h  example_ds_camera_model_projection_test.cpp  example_gtsam_ds_camera_model.cpp  example_gtsam_ds_camera_model2.cpp  example_gtsam_isam2.cpp  example_gtsam_landmark_based_slam.cpp  example_gtsam_odometry.cpp  example_gtsam_robot_localization.cpp  example_gtsam_sfm1.cpp  example_gtsam_sfm_smart_factor.cpp  example_gtsam_test1.cpp  example_pangolin.cpp  example_viewer_covariance_test.cpp  example_viewer_test1.cpp
example/vislam/: CMakeLists.txt  ba_test2_vio_sim_dataset.cpp  sample1.cpp  sample2_ba_opt2.cpp  sample2_ba_pre.cpp  sample2_cam.cpp  sample2_initialize.cpp  sample2_reprojection.cpp  sample_viz.cpp
example/vslam/: CMakeLists.txt  example_cd_arg.cpp  example_continuous_detection.cpp  example_feature_detection_and_tracking.cpp  example_feature_detector.cpp  example_hello.cpp  example_kimera_backend.cpp  example_kimera_frontend_detection_and_tracking.cpp  example_lssd_tracker.cpp  example_serialization.cpp
params/: EurocKimeraDataProvider.json  FeatureDetectorANMS.json  FeatureTrackerLSSDLucasKanade.json  FeatureVerification5PointRANSAC.json  KittiKimeraDataProvider.json  euroc_V1_01.json  euroc_V1_03.json  iSAM2Backend.json  myroom_V1_01.json  myroom_V1_02.json
src/vislam/: CMakeLists.txt  type_defines.hpp
src/vislam/bundle_adjustment/: CMakeLists.txt  ba_pre.cpp  ba_pre.hpp  geometry.cpp  geometry.hpp
src/vislam/data/: CMakeLists.txt  camera.cpp  camera.hpp  dense_frame.hpp  feature_in_frame.cpp  feature_in_frame.hpp  frame.cpp  frame.hpp  landmark.cpp  landmark.hpp
src/vislam/feature/: CMakeLists.txt  dense_feature_extructor.cpp  dense_feature_extructor.hpp  dense_feature_extructor_proto.cpp  dense_feature_extructor_proto.hpp  dense_feature_features.cpp  dense_feature_utils.cpp  feature_test.cpp  feature_test.hpp
src/vislam/initialize/: CMakeLists.txt  initializer.cpp  initializer.hpp
src/vislam/utils/: CMakeLists.txt
src/vislam/utils/loader/: CMakeLists.txt  log_util.cpp  log_util.h
src/vslam/: CMakeLists.txt  type_defines.hpp
src/vslam/backend/: Backend.cpp  Backend.hpp  BackendBase.cpp  BackendBase.hpp  BackendUtilities.cpp  BackendUtilities.hpp  CMakeLists.txt  ContinuousDetectorBackend.cpp  ContinuousDetectorBackend.hpp  ContinuousDetectorBackendParameter.cpp  frontend.cpp  frontend.hpp  iSAM2Backend.cpp  iSAM2Backend.hpp  iSAM2BackendParameter.cpp
src/vslam/data/: CMakeLists.txt  Camera.cpp  Camera.hpp  Frame.cpp  Frame.hpp  Internals.cpp  Internals.hpp  Landmark.cpp  Landmark.hpp  ThreadsafeContainer.cpp  ThreadsafeContainer.hpp
src/vslam/dataprovider/: CMakeLists.txt  DataProviderBase.hpp  EurocKimeraDataProvider.cpp  EurocKimeraDataProvider.hpp
src/vslam/factor/: CMakeLists.txt  DoubleSphereProjectionFactor.hpp  GeneralProjectionFactor.hpp
src/vslam/feature/: CMakeLists.txt  FeatureDetector.cpp  FeatureDetector.hpp  FeatureDetectorANMS.cpp  FeatureDetectorANMS.hpp  FeatureDetectorBase.cpp  FeatureDetectorBase.hpp  FeatureDetectorShiTomasi.cpp  FeatureDetectorShiTomasi.hpp  FeatureDetectorShiTomasiBucketing.cpp  FeatureDetectorShiTomasiBucketing.hpp  FeatureTrackerBase.cpp  FeatureTrackerBase.hpp  FeatureTrackerLSSDLucasKanade.cpp  FeatureTrackerLSSDLucasKanade.hpp  FeatureTrackerLucasKanade.cpp  FeatureTrackerLucasKanade.hpp
src/vslam/feature/LSSDOpticalFlow/: README.md  frame_to_frame_optical_flow.h  frame_to_frame_optical_flow_single_thread.cpp  frame_to_frame_optical_flow_single_thread.hpp  optical_flow.cpp  optical_flow.h  patch.h  patch_optical_flow.h  patterns.h
src/vslam/feature/LSSDOpticalFlow/utils/: common_types.h  keypoints.cpp  keypoints.h  vio_config.cpp
src/vslam/feature/NonMaximumSuppression/: NonMaximumSuppression.cpp  NonMaximumSuppression.hpp  README.md
src/vslam/feature/NonMaximumSuppression/anms/: CMakeLists.txt  anms.cpp  anms.h  nanoflann.hpp
src/vslam/feature/NonMaximumSuppression/anms/range-tree/: ranget.h
src/vslam/feature/kdtree/: KDTree.cpp  KDTree.hpp
src/vslam/frontend/: CMakeLists.txt  ContinuousDetectorFrontend.cpp  ContinuousDetectorFrontend.hpp  ContinuousDetectorFrontendParameter.cpp  Frontend.cpp  Frontend.hpp  FrontendBase.cpp  FrontendBase.hpp  KimeraFrontend.cpp  KimeraFrontend.hpp  KimeraFrontendParameter.cpp  Verification.cpp  Verification.hpp  backend.cpp  backend.hpp
src/vslam/initialization/: CMakeLists.txt  Initialization.cpp  Initialization.hpp  PoseInitialization.cpp  PoseInitialization.hpp
src/vslam/io/: CMakeLists.txt  DataOutputBase.cpp  DataOutputBase.hpp  DataProviderBase.cpp  DataProviderBase.hpp  EurocKimeraDataProvider.cpp  EurocKimeraDataProvider.hpp  EurocKimeraDataProviderRadialTangentialCameraModel.cpp  EurocKimeraDataProviderRadialTangentialCameraModel.hpp  KittiKimeraDataProvider.cpp  KittiKimeraDataProvider.hpp  LogDataOutput.cpp  LogDataOutput.hpp  TumDataOutput.cpp  TumDataOutput.hpp  csv.h
src/vslam/serialization/: CMakeLists.txt  Serializations.hpp
src/vslam/utility/: CMakeLists.txt  DataUtilities.cpp  DataUtilities.hpp  OpenCVUtilities.cpp  OpenCVUtilities.hpp
src/vslam/viewer/: CMakeLists.txt  ThreadsafeQueue.hpp  Viewer.cpp  Viewer.hpp  ViewerPrimitives.cpp  ViewerPrimitives.hpp  ViewerViz.cpp  ViewerViz.hpp
src/vslam/viewer/Widget/: Quadric.cpp  Quadric.hpp
test/: CMakeLists.txt
test/sample/: test_sample1.cpp
test/vislam/: test_sample1.cpp
(+18 files in other folders)
